Modify Pipeline code

--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -16,5 +16,5 @@ stages:
       displayName: DISPLAY NAME
       inputs:
         script: 'COMMAND StarterAPIs.json'
-        workingDirectory: starter-code/automatedtesting/postman
+        workingDirectory: '$(System.DefaultWorkingDirectory)'
     
