Modify Pipeline code

--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -15,6 +15,6 @@ stages:
     - task: CmdLine@2
       displayName: DISPLAY NAME
       inputs:
-        script: 'COMMAND StarterAPIs.json'
+        script: 'newman run StarterAPIs.json'
         workingDirectory: '$(System.DefaultWorkingDirectory)'
     
